fix(style): don't display firefox logo on small screens for choose what to sync mozilla/fxa-content-server#6509) r=@vladikoff
Fixes mozilla/fxa-content-server#6314

This PR removes the firefox logo on small screens when on CWTS. When viewed through a smaller device, the navigation bar pushes down the view causing the save settings button not to be shown.

--- a/packages/fxa-content-server/app/styles/modules/_branding.scss
+++ b/packages/fxa-content-server/app/styles/modules/_branding.scss
@@ -21,6 +21,10 @@
     margin: 10px auto 0 auto;
     top: 0;
     width: 100%;
+
+    .screen-choose-what-to-sync & {
+      display: none;
+    }
   }
 
   @include respond-to('trustedUI') {
